--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,6 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "npm run preview -- --port $PORT"
-healthcheckPath = "/"
-healthcheckTimeout = 100
+startCommand = "npm run preview -- --port $PORT --host 0.0.0.0"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
