--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
